# KyMoRem

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  FAQ.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md
apps/android/: README.md  settings.gradle.kts
apps/kymorem-agent/: Cargo.toml
apps/kymorem-agent/src/: main.rs
assets/themes/: cyber-noir.json  stellar-dark.css  stellar-dark.json  synthwave-night.json  terminal-green.json
crates/kymorem-core/: Cargo.toml
crates/kymorem-core/src/: lib.rs
crates/kymorem-input/: Cargo.toml
crates/kymorem-protocol/: Cargo.toml
docs/: android-client.md  architecture.md  barrier-field-issues.md  barrier-research.md  configuration.md  cryptography.md  discovery.md  email-relay.md  input-queue-policy.md  linux-server-and-tty.md  localization.md  networking.md  operations.md  packaging.md  platforms.md  protocol.md  release.md  roadmap.md  security-review-2026-06-20.md  security.md  service.md  technical-identity.md  themes.md  tray.md  windows7-client-onboarding.md
docs/localized/: FAQ.ch.md  FAQ.en.md  FAQ.it.md  README.ch.md  README.en.md  README.it.md
examples/: layout.example.toml
install/: install_linux_client.sh  install_windows.ps1  kymorem_linux_tray.sh  uninstall_linux_client.sh  uninstall_windows.ps1
packaging/android/: README.md  build-android.ps1  build-android.sh
packaging/common/: product.json  uninstall-linux-portable.sh  (+1 more)
packaging/i18n/: ch-CH.json  (+2 more)
scripts/: New-KyMoRemLinuxClientPackage.ps1  New-KyMoRemWin7ClientPackage.ps1  check.ps1
tests/: test_kymorem_linux_tty.py  test_kymorem_routing.py
(+54 files in other folders)
