[workspace]
members = [
    "crates/kymorem-protocol",
    "crates/kymorem-core",
    "crates/kymorem-input",
    "apps/kymorem-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["KyMoRem contributors"]
description = "Keyboard Mouse Remote: LAN keyboard and pointer sharing for desktop and Android."

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
