[package]
name = "kymorem-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "KyMoRem desktop CLI agent."

[dependencies]
anyhow.workspace = true
clap.workspace = true
kymorem-input = { path = "../../crates/kymorem-input" }
kymorem-protocol = { path = "../../crates/kymorem-protocol" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
